<resources>
    <string name="app_name">CapstoneMSIB</string>

    <string name="on_boarding_one">On Boarding One</string>
    <string name="mental_health_test">Tes Kesehatan Jiwa</string>
    <string name="desc_ob1">Lakukan tes untuk mengetahui \n apakah kamu sedang \n mengalami depresi atau tidak</string>
    <string name="skip">Lewati</string>
    <string name="go_on">Lanjutkan</string>
    <string name="on_boarding_two">On Boarding Two</string>
    <string name="consultation">Konsultasi</string>
    <string name="desc_ob2">"Ceritakan apa yang terjadi padamu \n pada psikolog berpengalaman "</string>
    <string name="flexible">Fleksibel</string>
    <string name="desc_ob3">Konsultasi mudah dilakukan \n dimana saja</string>
    <string name="welcome_sign_in">Selamat Datang,</string>
    <string name="welcome_desc">Silakan masuk untuk melanjutkan aplikasi</string>
    <string name="image_sign_in">Image Sign In</string>
    <string name="email">Email</string>
    <string name="hint_username">Masukan nama pengguna kamu</string>
    <string name="password">Kata sandi</string>
    <string name="hint_password">Masukan kata sandi kamu</string>
    <string name="forget_password">Lupa kata sandi?</string>
    <string name="image_sign_up">Image Sign Up</string>
    <string name="sign_up">Buat Akun Kamu</string>
    <string name="sign_up_desc">Buat akun kamu untuk memulai aplikasi</string>
    <string name="enter">Masuk</string>
    <string name="create_new_account">Buat Akun Baru</string>
    <string name="create_account">Buat Akun</string>
    <string name="full_name">Nama lengkap</string>
    <string name="hint_name">Masukan nama lengkap kamu</string>

    <string name="splash_screen_image">Splash Screen Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_test">Test</string>
    <string name="title_psycholog">Psycholog</string>
    <string name="title_profile">Profile</string>
    <string name="hi_natasya">Hi, %1$s</string>
    <string name="image_psycholog">Image Psycholog</string>
    <string name="most_liked_psycholog">Psikolog paling banyak disukai</string>
    <string name="recommended_psycholog">Rekomendasi Psikolog</string>
    <string name="view_more">Selengkapnya</string>
    <string name="welcome">Selamat datang!</string>
    <string name="test_title">Kategori Tes Depresi</string>
    <string name="desc_test_title">Silakan Pilih Test yang akan dilakukan</string>
    <string name="test_type1">Self-Reporting Questionnaire (SRQ)</string>
    <string name="desc_type_test1">kuesioner yang dikembangkan oleh\n World Health Organization (WHO) tes ini \ndigunakan untuk skrining gangguan \npsikiatri.</string>
    <string name="start_test">Mulai Test</string>
    <string name="icon_test_sqr">Icon test SQR</string>
    <string name="profile">Profil</string>
    <string name="save_profile">Simpan perubahan</string>
    <string name="username">Nama Pengguna</string>
    <string name="hint_email">Masukkan email kamu</string>
    <string name="image_result_test">Image Result Test</string>
    <string name="complete_test">Tes Sudah Selesai</string>
    <string name="desc_result_test">Dari tes yang sudah kamu lewati, \nsepertinya kamu harus konsultasi deh. \nUntuk langsung konsultasi, kamu bisa \ntekan tombol konsultasi di bawah ini.</string>
    <string name="back_to_test">Kembali ke Tes</string>
    <string name="number_of_questions">Pertanyaan 1/20</string>
    <string name="question">Apakah kamu mengalami gangguan pola makan?</string>
    <string name="desc_option_one">Saya mengambil keputusan-\nkeputusan sama baiknya \ndengan sebelumnnya</string>
    <string name="desc_option_two">Saya lebih banyak menunda \nkeputusan dari biasanya</string>
    <string name="desc_option_three">Saya mempunyai kesulitan yang \nlebih besar dalam mengambil \nkeputusan dari sebelumnya</string>
    <string name="desc_option_four">Saya sama sekali tidak dapat \nmengambil keputusan</string>
    <string name="next">Selanjutnya</string>
    <string name="previous">Sebelumnya</string>
    <string name="image_test_bdi">Image Test BDI</string>
    <string name="title_test_bdi">Test Beck Depression \nInventory (BDI)</string>
    <string name="desc_test_bdi">Dengan tes ini, kamu akan mengetahui \ntingkat kesehatan mental \nkamu.</string>
    <string name="test_instructions">Pilihlah satu pernyataan dalam masing-masing kelompok yang paling menggambarkan perasaan Anda 1 bulan terakhir</string>
    <string name="arrow_right_icon">arrow right icon</string>
    <string name="telephone_number">Nomor Telepon</string>
    <string name="hint_telephone_number">Masukan nomor telepon kamu</string>
    <string name="date_of_birth">Tanggal Lahir</string>
    <string name="hint_date_of_birth">Masukan tanggal lahir kamu</string>
    <string name="halo_name">Halo Risha Amara</string>
    <string name="sign_up_photo_desc">Silahkan masukan foto kamu ya</string>
    <string name="upload_later">Upload nanti</string>
    <string name="depression_test">Tes Depresi</string>
    <string name="item_home_test_description">Berisi beberapa daftar \npertanyaan untuk memeriksa \nkondisi mental Anda.</string>
    <string name="img_sign_up">Image Sign Up Photo Screen</string>
    <string name="add_image">Add image</string>
    <string name="exp_name">Risha Amara</string>
    <string name="exp_email">rishaamara95@gmail.com</string>
    <string name="exp_date_of_birth">01 Januari 2000</string>
    <string name="exp_number_phone">08211212121221</string>
    <string name="exp_username">rishaamara</string>
    <string name="search_psikolog">Cari psikolog</string>
    <string name="psychologist_lis">Daftar Psikolog</string>
    <string name="image_detail_psycholog">Image detail psycholog</string>
    <string name="exp_psycholog_name">Moch Akbar Zulfikar M.Psi</string>
    <string name="exp_psycholog_type">Psikologi klinis dewasa</string>
    <string name="exp_psycholog_experience">5 Tahun Pengalaman</string>
    <string name="alumni">Alumni</string>
    <string name="exp_psycholog_alumni">Universitas Pendidikan Indonesia, 2019</string>
    <string name="practice_place">Tempat Praktik</string>
    <string name="exp_psycholog_practice_place">Biro psikologi Laksita Educare Yogyakarta \ndan Rektorat Kemahasiswaan UII DIY, Yogyakarta</string>
    <string name="str_number">Nomor STR</string>
    <string name="exp_psycholog_str_number">72329323764346374372</string>
    <string name="chat_now">Chat Sekarang</string>
    <string name="api_key">gw2u3cmttmy8</string>
    <string name="finish">Finish</string>
    <string name="next_question">Next Question</string>
    <string name="log_out">Log Out</string>
    <string name="icon_edit_profile">Icon Edit Profile</string>
</resources>