<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.aldion.capstonemsib.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_test"
        android:name="com.aldion.capstonemsib.ui.home.TestFragment"
        android:label="@string/title_test"
        tools:layout="@layout/fragment_test" />
    <fragment
        android:id="@+id/navigation_psycholog"
        android:name="com.aldion.capstonemsib.ui.home.PsychologFragment"
        android:label="@string/title_psycholog"
        tools:layout="@layout/fragment_psycholog" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.aldion.capstonemsib.ui.home.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <activity
        android:id="@+id/onBoardingOneActivity"
        android:name="com.aldion.capstonemsib.onboarding.OnBoardingOneActivity"
        android:label="activity_on_boarding_one"
        tools:layout="@layout/activity_on_boarding_one" />
    <activity
        android:id="@+id/onBoardingTwoActivity"
        android:name="com.aldion.capstonemsib.onboarding.OnBoardingTwoActivity"
        android:label="activity_on_boarding_two"
        tools:layout="@layout/activity_on_boarding_two" />
    <activity
        android:id="@+id/onBoardingThreeActivity"
        android:name="com.aldion.capstonemsib.onboarding.OnBoardingThreeActivity"
        android:label="activity_on_boarding_three"
        tools:layout="@layout/activity_on_boarding_three" />
    <activity
        android:id="@+id/signInActivity"
        android:name="com.aldion.capstonemsib.signin.SignInActivity"
        android:label="activity_sign_up"
        tools:layout="@layout/activity_sign_up" />


</navigation>