<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileEditFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/sample_psikolog" />

    <TextView
        android:id="@+id/tv_edit_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/psemibold"
        android:text="@string/full_name"
        android:textColor="@color/darkerBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView2" />


    <EditText
        android:id="@+id/editTextNama"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        android:hint="@string/hint_name"
        android:paddingStart="16dp"
        android:textColorHint="@color/black"
        android:paddingEnd="16dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape_rectangle_edit_text_purple"
        android:fontFamily="@font/pregular"
        android:inputType="text"
        android:textColor="@color/darkerBlack"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_nama" />

    <EditText
        android:id="@+id/editTextTTL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/shape_rectangle_edit_text_purple"
        android:fontFamily="@font/pregular"
        android:hint="@string/hint_date_of_birth"
        android:inputType="date"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="12sp"
        android:textColor="@color/darkerBlack"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_edt_tgllahir" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/shape_rectangle_edit_text_purple"
        android:fontFamily="@font/pregular"
        android:inputType="phone"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:hint="@string/hint_telephone_number"
        android:textSize="12sp"
        android:textColor="@color/darkerBlack"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_edt_notelp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/shape_rectangle_edit_text_purple"
        android:fontFamily="@font/pregular"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:hint="@string/hint_email"
        android:textSize="12sp"
        android:textColor="@color/darkerBlack"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_edt_email" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/shape_rectangle_edit_text_purple"
        android:fontFamily="@font/pregular"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:hint="@string/hint_username"
        android:textSize="12sp"
        android:textColor="@color/darkerBlack"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_edt_username" />
<EditText
        android:id="@+id/editPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/shape_rectangle_edit_text_purple"
        android:fontFamily="@font/pregular"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:hint="@string/hint_password"
        android:textSize="12sp"
        android:textColor="@color/darkerBlack"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_edt_password" />

    <TextView
        android:id="@+id/tv_edt_tgllahir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/psemibold"
        android:text="@string/date_of_birth"
        android:textColor="@color/darkerBlack"
        app:layout_constraintEnd_toEndOf="@+id/editTextNama"
        app:layout_constraintStart_toStartOf="@+id/editTextNama"
        app:layout_constraintTop_toBottomOf="@+id/editTextNama" />

    <TextView
        android:id="@+id/tv_edt_notelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/psemibold"
        android:text="@string/telephone_number"
        android:textColor="@color/darkerBlack"
        app:layout_constraintStart_toStartOf="@+id/editTextTTL"
        app:layout_constraintTop_toBottomOf="@+id/editTextTTL" />

    <TextView
        android:id="@+id/tv_edt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/psemibold"
        android:text="@string/email"
        android:textColor="@color/darkerBlack"
        app:layout_constraintStart_toStartOf="@+id/editTextPhone"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <TextView
        android:id="@+id/tv_edt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/psemibold"
        android:text="@string/username"
        android:textColor="@color/darkerBlack"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

<TextView
        android:id="@+id/tv_edt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/psemibold"
        android:text="@string/username"
        android:textColor="@color/darkerBlack"
        app:layout_constraintStart_toStartOf="@+id/editUsername"
        app:layout_constraintTop_toBottomOf="@+id/editUsername" />

        <Button
            android:id="@+id/save_edt_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/shape_rectangle_primary"
            android:fontFamily="@font/psemibold"
            android:text="@string/save_profile"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>