<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.testscreen.TestFragment">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/image_test_bdi"
        android:src="@drawable/test_bdi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitleTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title_test_bdi"
        android:textAlignment="center"
        android:fontFamily="@font/psemibold"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/tvDescTestBDI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:text="@string/desc_test_bdi"
        android:fontFamily="@font/pregular"
        android:textSize="14sp"
        android:textColor="@color/darkerBlack"
        app:layout_constraintEnd_toEndOf="@+id/tvTitleTest"
        app:layout_constraintStart_toStartOf="@+id/tvTitleTest"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleTest" />

    <Button
        android:id="@+id/btnStartTest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="30dp"
        android:text="@string/start_test"
        android:fontFamily="@font/psemibold"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:background="@drawable/shape_rectangle_primary"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescTestBDI" />


</androidx.constraintlayout.widget.ConstraintLayout>